syntax = "proto3";

package account;

option go_package="github.com/tehrelt/moi-uslugi/proto/account;accountpb";

service AccountService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc List(ListRequest) returns (stream Account);
    rpc ListUsersAccounts(ListUsersAccountsRequest) returns (stream Account);
}

message Account {
    string id = 1;
    int64 balance = 2;
    string user_id = 3;
    string house_id = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message CreateRequest {
    string user_id = 1;
    string house_id = 2;
}

message CreateResponse {
    string id = 1;
}

message Range {
    int64 min = 1;
    int64 max = 2;
}

message ListRequest {
}

message ListResponse {
    Account account = 1;
}

message ListUsersAccountsRequest {
    string user_id = 1;
}

message ListUsersAccountsResponse {
    Account account = 1;
}
